@@ -1,12 +1,20 @@
 CHANGE LOG of KeyTalk
 =================================================================
 
+server-5.5.2, in development
+----------------------
+Support upgrades from v5.2.1 and higher
+Supports RCDP 2.3.0, 2.2.0, 2.1.0 and 2.0.0
+Support import of settings created in v5.2.0-v5.5.2, v4.6.0 and v4.6.2
+    - ADDED: Disallow service operators from mass-enrolling and mass-revoking/removing user certificates
+
+
 client-5.5.1, in development
 ----------------------
     - ADDED: Allow non-root users to customize and use KeyTalk Linux client (KEYTALK-409)
 
 
-server-5.5.1, in development
+server-5.5.1, 22 February 2019
 ----------------------
 Support upgrades from v5.2.1 and higher
 Supports RCDP 2.3.0, 2.2.0, 2.1.0 and 2.0.0
